--- a/build.gradle
+++ b/build.gradle
@@ -25,5 +25,8 @@ compile 'org.hibernate:hibernate-search-serialization-avro:5.5.8.Final'
     compile 'hsqldb:hsqldb:1.8.0.4'
     compile 'org.slf4j:slf4j-log4j12:1.6.1'
 
+    // https://mvnrepository.com/artifact/com.h2database/h2
+    testCompile group: 'com.h2database', name: 'h2', version: '1.4.197'
+
     testCompile group: 'junit', name: 'junit', version: '4.+'
 }
